--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>轮播</title>
-    <link rel="stylesheet" href="../css/rest.css">
-    <link rel="stylesheet" href="../css/carousel.css">
-    <link rel="stylesheet" href="../css/content.css">
+    <link rel="stylesheet" href="/blob/master/css/carousel">
 </head>
 <body>
     <div class="zq-carousel" id="box" style="margin-top: 10px">
