--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>轮播</title>
-    <link rel="stylesheet" href="/blob/master/css/carousel">
+    <link rel="stylesheet" href="css/carousel.css">
 </head>
 <body>
     <div class="zq-carousel" id="box" style="margin-top: 10px">
