--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <script src="https://www.jq22.com/jquery/jquery-3.3.1.js"></script>
-    <script src="https://github.com/johnQia/johnQia.github.io/tree/master/js"></script>
+    <script src="js/carousel.js"></script>
     <script>
         //调用
         let box = new carousel();
