--- a/index.html
+++ b/index.html
@@ -2,10 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>轮播</title>
+    <title>首页</title>
     <link rel="stylesheet" href="css/carousel.css">
 </head>
 <body>
+    <div class="zq-tab" id="test">
+        <ul class="zq-tab-title">
+            <li class="zq-this">第一个</li>
+            <li>第二个</li>
+            <li>第三个</li>
+        </ul>
+        <div  class="zq-tab-content">
+            <div class="zq-tab-item">第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第
+                一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第
+                一块内容第一块内容第一块内容第一块内容第一块内
+            </div>
+            <div class="zq-tab-item">第二块内容</div>
+            <div class="zq-tab-item">第三块内容</div>
+        </div>
+    </div>
+    <div class="zq-tab" id="test1">
+        <ul class="zq-tab-title">
+            <li>一个</li>
+            <li>二个</li>
+            <li>三个</li>
+            <li>4个</li>
+            <li>5个</li>
+            <li>6个</li>
+            <li>7个</li>
+        </ul>
+        <div  class="zq-tab-content">
+            <div class="zq-tab-item">一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第
+                一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第
+                一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第
+                一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第
+                一块内容第一块内容第一块内容第一块内容第一块内容第一块内容第一块内容
+            </div>
+            <div class="zq-tab-item">第二块内容</div>
+            <div class="zq-tab-item">第三块内容</div>
+            <div class="zq-tab-item">第4块内容</div>
+            <div class="zq-tab-item">第5块内容</div>
+            <div class="zq-tab-item">第6块内容</div>
+            <div class="zq-tab-item">第7块内容</div>
+        </div>
+    </div>
     <div class="zq-carousel" id="box" style="margin-top: 10px">
         <div zq-carousel-item="">
             <div><div class="imgBox"></div><p class="text">第一张图片</p></div>
@@ -26,6 +66,18 @@
     <script src="js/carousel.js"></script>
     <script>
         //调用
+        let tab1 = new tab();
+        tab1.render({
+            elem:"#test",
+            trigger:"hover"
+        });
+
+        let tab2 = new tab();
+        tab2.render({
+            elem:"#test1",
+            allowClose:true
+        })
+        
         let box = new carousel();
         box.render({
             elem: '#box'
