--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         </div>
     </div>
     <script src="https://www.jq22.com/jquery/jquery-3.3.1.js"></script>
+    <script src="js/tab.js"></script>
     <script src="js/carousel.js"></script>
     <script>
         //调用
